# Not-Alone

./: .gitignore  TODOS.md  businesses.json  cities.json  comments.json  jest.config.js  package-lock.json  package.json  posts.json  tsconfig.json
Server/: .env.example  README.md  TODOS.md  compose.yml  dockerfile  jest.config.js  package-lock.json  package.json  test-report.html  tsconfig.json
client/: README.md  index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
client/test/: .gitignore  README.md  pyproject.toml  requirements.txt  run.bat  run.sh  run_tests.bat
client/test/src/: conftest.py  run_test.txt  util.py
client/test/src/pages/landing/: locators.py  test_1_g1.py  test_1_landing_elements.py  test_2_g1.py  test_2_redirects.py  test_3_payment_form.py
client/test/src/pages/login/: locators.py  test_1_login_elements.py  test_2_redirects.py  test_3_login_form.py
client/test/src/pages/profile/: test_1_profile.py  test_2_profile_info.py  test_3_edit_profile.py  test_4_invalid_profile_update.py  test_5_profile_validation.py  test_6_profile_posts.py  test_7_profile_requests.py  test_8_profile_joincity.py
client/test/src/pages/signup/: locators.py  test_1_signup_elements.py  test_2_redirects.py  test_3_signup_form.py
coverage/: clover.xml  coverage-final.json  lcov.info
docs/: businessDocs.md  channelDoc.md  cityDoc.md  discountDocs.md  donationDoc.md  eatupDoc.md  messageDoc.md  requestDoc.md  socketDoc.md  userDoc.md
src/: index.ts
tests/: auth.test.ts  bussinessHelper.ts  cityHelper.ts  comments.json  commentsHelper.ts  (+13 more)
(+340 files in other folders)
